Fixed z-index to let dropdowns work

--- a/app/assets/stylesheets/frameworks.scss
+++ b/app/assets/stylesheets/frameworks.scss
@@ -192,6 +192,6 @@ h4.group-header {
 
 #messages {
   position: absolute;
-  z-index: 9999;
+  z-index: 100;
   width: 80%;
 }
